updated setup scripts and cfg files

--- a/demo1/ndnrtc.cfg
+++ b/demo1/ndnrtc.cfg
@@ -15,7 +15,7 @@ general =
     use_avsync = true; // [true | false] -- enable synchronization between audio/video streams
     headless_mode = 0; // [0 - off | 1 - consumer | 2 - producer] -- use headless mode (starts right away in the chosen mode)
     headless_user = "remap2";
-    audio = false;
+    audio = true;
     video = true;
 };
 
