--- a/ndncomm/ndnrtc.cfg
+++ b/ndncomm/ndnrtc.cfg
@@ -15,7 +15,7 @@ general =
     use_avsync = true; // [true | false] -- enable synchronization between audio/video streams
     headless_mode = 0; // [0 - off | 1 - consumer | 2 - producer] -- use headless mode (starts right away in the chosen mode)
     headless_user = "remap2";
-    audio = false;
+    audio = true;
     video = true;
 };
 
@@ -23,8 +23,8 @@ general =
 capture =
 {
     device_id = 0;          // first default camera in the list
-    capture_width = 640;//640; // 320;
-    capture_height = 480;//480; // 240;
+    capture_width = 800;//640; // 320;
+    capture_height = 450;//480; // 240;
     fps = 30;               // capture framerate
     gop = 30;
 };
