--- a/remap2/ndnrtc.cfg
+++ b/remap2/ndnrtc.cfg
@@ -6,7 +6,7 @@ name = "Ndn-RTC";
 // general parameters
 general =
 {
-    log_level = "all";  // all, debug, none, default
+    log_level = "none";  // all, debug, none, default
     log_file = "ndnrtc.log"; 
     use_tlv = true; // [true | false] -- determines, whether the library should use TLV encoding
     use_rtx = true; // [true | false] -- reissue timedout interests (late data cases)
