--- a/demo2/ndnrtc.cfg
+++ b/demo2/ndnrtc.cfg
@@ -6,7 +6,7 @@ name = "Ndn-RTC";
 // general parameters
 general =
 {
-    log_level = "all";  // all, debug, none, default
+    log_level = "none";  // all, debug, none, default
     log_file = "ndnrtc.log"; 
     use_tlv = true; // [true | false] -- determines, whether the library should use TLV encoding
     use_rtx = true; // [true | false] -- reissue timedout interests (late data cases)
@@ -33,7 +33,7 @@ capture =
 vstreams = ( {
                 frame_rate = 30; // encoding frame rate
                 gop = 30;
-                start_bitrate = 1000;
+                start_bitrate = 500;
                 max_bitrate = 0;
                 drop_frames = true; // should drop frames to keep up with the bitrate
             } );
