--- a/ndncomm/ndnrtc.cfg
+++ b/ndncomm/ndnrtc.cfg
@@ -45,7 +45,7 @@ ndnnetwork =
 {
     connect_host = "localhost";
     connect_port = 6363;
-ndn_prefix="/ndn/edu/uci";
+ndn_prefix="/ndn/edu/ucla/remap";
 };
 
 // video publishing parameters
