--- a/ndncomm/ndnrtc.cfg
+++ b/ndncomm/ndnrtc.cfg
@@ -6,7 +6,7 @@ name = "Ndn-RTC";
 // general parameters
 general =
 {
-    log_level = "none";  // all, debug, none, default
+    log_level = "all";  // all, debug, none, default
     log_file = "ndnrtc.log"; 
     use_tlv = true; // [true | false] -- determines, whether the library should use TLV encoding
     use_rtx = true; // [true | false] -- reissue timedout interests (late data cases)
@@ -38,7 +38,7 @@ vstreams = ( {
                 drop_frames = true; // should drop frames to keep up with the bitrate
                 encode_width = 1280;
                 encode_height = 720;
-            } );
+            });
 
 // ndn network parameters
 ndnnetwork =
